[package]
name = "rust-https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }

[[bin]]
name = "todo-app"
path = "src/main.rs"
